# CLI-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake_windows.yml
Application/: CMakeLists.txt
Application/src/: Config.h  main.cpp
